@@ -1,3 +1,9 @@
+Fri Jun 24 17:39:48 2005  George Lebl <jirka@5z.com>
+
+	* src/symbolic.c, src/geniustests.txt: allow differentiation of
+	  E_CALL's where first arg is a function, not an identifier, for
+	  example this is what we get on SymbolicDerivative(sin*cos)
+
 Fri Jun 24 17:21:22 2005  George Lebl <jirka@5z.com>
 
 	* src/symbolic.c, src/eval.c, src/geniustests.txt: Some more
